--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
         "run-script": "ts-node --project config/tsconfig.script.json",
         "format": "yarn run-script script/format.ts",
         "start": "yarn run-script script/start.ts",
-        "build": "yarn run-script script/build.ts"
+        "build": "yarn run-script script/build.ts",
+        "module": "yarn run-script script/module.ts"
     },
     "devDependencies": {
         "@iamyth/devtool-utils": "1.0.1",
         "@iamyth/prettier-config": "0.0.2",
         "@types/node": "18.11.15",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.9",
         "eslint-config-iamyth": "0.0.10",
         "prettier": "2.8.1",
         "ts-node": "10.9.1",
         "typescript": "4.9.4",
         "vite-runner": "1.1.0"
+    },
+    "dependencies": {
+        "history": "5.3.0",
+        "less": "4.1.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-router": "6.4.5",
+        "react-shiba": "1.1.4"
     }
 }
