--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite-runner": "1.1.0"
     },
     "dependencies": {
+        "@iamyth/util": "1.2.1",
         "history": "5.3.0",
         "less": "4.1.3",
         "react": "18.2.0",
